:lipstick: corrected scrollbar on x axis

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,8 @@
 @import '~antd/dist/antd.css';
 
-html, body {
-    min-width: 100vw;
-    min-height: 100vh;
-}
-
 body {
+  min-width: 100vw;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
